Add types in Experience entity to split WORK_EXPERIENCE and EDUCATION experiences, rename company to organization in Experience entity